# fs-code

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  electron-builder.yml  electron.vite.config.ts  index.html  package-lock.json  package.json  test-electron.js  tsconfig.node.json  tsconfig.web.json  vite.config.ts  vite.tauri.config.ts
.claude/: settings.json
.claude/skills/codex/: SKILL.md
.claude/skills/review/: SKILL.md
.github/workflows/: auto-bump-version.yml  release.yml
crates/fs-agent/: Cargo.toml
crates/fs-agent/src/: lib.rs
crates/fs-app/: Cargo.toml
crates/fs-app/src/: main.rs
crates/fs-core/: Cargo.toml
crates/fs-core/src/: lib.rs
crates/fs-pty/: Cargo.toml
crates/fs-pty/src/: instance.rs  lib.rs  manager.rs
crates/fs-tui/: Cargo.toml
crates/fs-tui/src/: app.rs  clipboard.rs  deps.rs  diff.rs  editor.rs  file_picker.rs  file_tree.rs  grid.rs  highlight.rs  lib.rs  palette.rs  render.rs  theme.rs
crates/fs-update/: Cargo.toml
crates/fs-update/src/: lib.rs
resources/: entitlements.mac.inherit.plist  entitlements.mac.plist  icon.icns
scripts/: bump-patch-version.sh  claude-journey-hook.cjs  fix-spawn-helper.cjs  patch-tree-sitter.cjs  release.sh
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: agent.rs  auth.rs  fs_ops.rs  keystore.rs  lib.rs  main.rs  providers.rs  state.rs  terminal.rs
src/components/: AgentPanel.tsx  Editor.tsx  FileExplorer.tsx  Terminal.tsx
src/main/: agent-env.test.ts  agent-env.ts  agent.ts  auth.ts  cli-install.ts  file-system.ts  index.ts  ipc.ts  keystore.ts  logger.ts  terminal-parser.test.ts  terminal.ts  updater.ts
src/main/codex/: codex-await.test.ts  codex.test.ts  collector.test.ts  collector.ts  db.test.ts  db.ts  hooks.ts  index.ts  indexer-worker.ts  indexer.ts  manager.ts  mcp-server.ts  parser.ts  query.ts  watcher.ts
src/main/providers/: claude-provider.ts  copilot-provider.ts  gemini-provider.ts  index.ts  jsonl-provider.test.ts  jsonl-provider.ts  openai-provider.ts  provider.ts
src/preload/: index.ts
src/renderer/: App.tsx  ThemeContext.tsx  index.html  main.tsx  theme.ts
src/renderer/components/activity/: FileActivitySidebar.tsx  FileDetailModal.tsx  FileExplorer.tsx
src/renderer/components/chat/: ChatPanel.tsx  ConversationPanel.tsx  MarkdownRenderer.tsx
src/renderer/components/editor/: Editor.tsx
src/renderer/components/explorer/: FileExplorer.tsx
src/renderer/components/grid/: AddAgentButton.tsx  AgentCell.tsx  AgentGrid.tsx  AgentTabs.tsx  FluidBackground.tsx  MinimizedAgentsPill.tsx
src/renderer/components/journey/: JourneyBar.tsx
src/renderer/components/palette/: CommandPalette.tsx  HelpOverlay.tsx  SessionPicker.tsx  ShortcutOverlay.tsx  SlashDropdown.tsx  commands.ts
src/renderer/components/scm/: ContextMenu.tsx  DiffView.tsx  SourceControlSidebar.tsx
src/renderer/components/settings/: ProviderSection.tsx  SettingsPanel.tsx  ThemePicker.tsx  UpdateSection.tsx
src/renderer/components/shared/: ConfirmDialog.tsx  DiffDisplay.tsx  diff-utils.test.ts  diff-utils.ts
src/renderer/components/terminal/: Terminal.tsx  TerminalDrawer.tsx
src/renderer/hooks/: useAgent.ts  useAgentManager.ts  useApiUsage.ts  useAuth.ts  useCodexStatus.ts  useContextUsage.ts  useEditor.ts  useFileActivity.ts  useFileTree.ts  useGhCliStatus.ts  useJourneyPhase.ts  useRecentFolders.ts  useResourceStats.ts  useSettings.ts  useSourceControl.ts  useTotalCost.ts  useUpdateStatus.ts
src/renderer/lib/: api.ts  tauri-api-shim.ts
src/server/: index.ts
src/shared/: types.test.ts  types.ts
src/types/: index.ts
