[workspace]
resolver = "2"
members = [
    "crates/fs-core",
    "crates/fs-pty",
    "crates/fs-agent",
    "crates/fs-tui",
    "crates/fs-update",
    "crates/fs-app",
]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
crossterm = "0.28"
ratatui = { version = "0.29", features = ["crossterm"] }
alacritty_terminal = "0.24"
portable-pty = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
which = "6"
dirs = "5"

[workspace.package]
version = "0.9.15"
edition = "2021"
license = "MIT"
