[package]
name = "fluid-state"
version = "0.5.6"
description = "FluidState — IDE built on the Claude Agent SDK"
authors = ["FluidState"]
license = "MIT"
repository = "https://github.com/vihaanshahh/fs-code"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "fluid_state_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
# tauri-plugin-updater = "2"  # re-enable once update endpoint is configured
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
keyring = "2"
which = "6"
portable-pty = "0.8"
dirs = "5"
regex = "1"
anyhow = "1"
walkdir = "2"
