[package]
name = "fs-agent"
version.workspace = true
edition.workspace = true

[dependencies]
fs-core = { path = "../fs-core" }
tokio = { workspace = true }
which = { workspace = true }
dirs = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
